--- a/views/get_event.templ
+++ b/views/get_event.templ
@@ -1,7 +1,7 @@
 package views
 
-import "github.com/MorrisMorrison/retfig/models"
+import "github.com/MorrisMorrison/retfig/viewmodels"
 
-templ GetEvent(event models.Event) {
-	<div>{ event.Name }</div>
+templ GetEvent(vm *viewmodels.GetEventViewModel) {
+	<div>{ vm.Name }</div>
 }
