implement join event feature

--- a/views/create_event.templ
+++ b/views/create_event.templ
@@ -2,7 +2,7 @@ package views
 
 templ CreateEvent() {
 	<div class="is-flex is-flex-direction-column">
-		<h1 class="title">Create Event</h1>
+		<h1 class="title"><i class="fa-solid fa-gift"></i> Create Event</h1>
 		<h2 class="subtitle">Create an event and share your generated link with your friends and family to find the perfect present together!</h2>
 		<div id="create-event" name="create-event" class="is-flex is-flex-direction-column box">
 			<form hx-post="/events" hx-target="#content" hx-ext="json-enc">
