--- a/views/navbar.templ
+++ b/views/navbar.templ
@@ -4,8 +4,9 @@ templ NavBar() {
 	<nav x-data="{isOpen: false}" class="navbar" role="navigation" aria-label="main navigation">
 		<div class="navbar-brand">
 			<a class="navbar-item" href="https://bulma.io">
-				<img src="https://bulma.io/images/bulma-logo.png" width="112" height="28"/>
+				<img src="/public/favicon-32x32.png" width="32" height="32"/>
 			</a>
+			<span class="navbar-item">retfig</span>
 			<a @click="isOpen = !isOpen" role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
 				<span aria-hidden="true"></span>
 				<span aria-hidden="true"></span>
