--- a/views/get_event.templ
+++ b/views/get_event.templ
@@ -6,7 +6,7 @@ templ GetEvent(vm *viewmodels.GetEventViewModel) {
 	<section class="section">
 		<div class="is-flex is-flex-direction-column">
 			@EventDetails(vm)
-			@PresentsList(vm.Presents)
+			@PresentList(vm.Presents)
 			@InvitationLink(vm.InvitationLink)
 		</div>
 	</section>
