--- a/views/get_invitation.templ
+++ b/views/get_invitation.templ
@@ -3,19 +3,19 @@ package views
 import "fmt"
 
 templ GetInvitation(eventId string) {
-	<div class="is-flex is-flex-direction-column">
+	<div class="is-flex is-flex-direction-column box">
 		<h1 class="title"><i class="fa-solid fa-gift"></i> Event Invitation</h1>
 		<h2 class="subtitle">Someone invited you to join an event to help find a present!</h2>
-		<div id="invitation" name="invitation" class="is-flex is-flex-direction-column box">
+		<div id="invitation" name="invitation" class="is-flex is-flex-direction-column">
 			<form hx-post={ string(templ.URL(fmt.Sprintf("/events/%s/participants", eventId))) } hx-target="#content" hx-replace-url={fmt.Sprintf("/events/%s", eventId)} hx-ext="json-enc">
-				<div class="field">
+				<div class="field" x-data="{ username: $persist('') }">
 					<div class="control">
-						<input class="input is-primary" id="username" name="username" type="text" placeholder="What is your name?"/>
+						<input x-model="username" class="input is-primary" id="username" name="username" type="text" placeholder="What is your name?"/>
 					</div>
 				</div>
 				<div class="field">
 					<div class="control">
-						<button type="submit" class="button is-link is-vcentered" id="create-event">Join Event</button>
+						<button type="submit" class="button is-primary is-vcentered has-text-light" id="create-event">Join Event</button>
 					</div>
 				</div>
 			</form>
