--- a/views/navbar.templ
+++ b/views/navbar.templ
@@ -7,7 +7,7 @@ templ NavBar() {
 				<img src="/public/favicon-32x32.png" width="32" height="32"/>
 			</a>
 			<span class="navbar-item">retfig</span>
-			<a @click="isOpen = !isOpen" role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+			<a @click="isOpen = !isOpen" role="button" class="navbar-burger has-text-primary" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
 				<span aria-hidden="true"></span>
 				<span aria-hidden="true"></span>
 				<span aria-hidden="true"></span>
@@ -45,7 +45,7 @@ templ NavBar() {
 			<div class="navbar-end">
 				<div class="navbar-item">
 					<div class="buttons">
-						<a class="button is-primary">
+						<a class="button is-primary has-text-light">
 							<strong>Sign up</strong>
 						</a>
 						<a class="button is-light">
