--- a/views/create_event.templ
+++ b/views/create_event.templ
@@ -6,24 +6,24 @@ templ CreateEvent() {
 		<h2 class="subtitle">Create an event and share your generated link with your friends and family to find the perfect present together!</h2>
 		<div id="create-event" name="create-event" class="is-flex is-flex-direction-column box">
 			<form hx-post="/events" hx-target="#content" hx-ext="json-enc">
-				<div class="field">
+				<div class="field" x-data="{ username: $persist('') }">
 					<div class="control">
-						<input class="input is-primary" id="username" name="username" type="text" placeholder="What is your name?"/>
+						<input class="input is-primary" id="username" name="username" type="text" placeholder="What is your name?" x-model="username" required/>
 					</div>
 				</div>
 				<div class="field">
 					<div class="control">
-						<input class="input is-primary" id="event-name" name="event-name" type="text" placeholder="What is the name of the event?"/>
+						<input class="input is-primary" id="event-name" name="event-name" type="text" placeholder="What is the name of the event?" required/>
 					</div>
 				</div>
 				<div class="field">
 					<div class="control">
-						<input class="input is-primary" id="recipient" name="recipient" type="text" placeholder="Who will receive the gift?"/>
+						<input class="input is-primary" id="recipient" name="recipient" type="text" placeholder="Who will receive the gift?" required/>
 					</div>
 				</div>
 				<div class="field">
 					<div class="control">
-						<button type="submit" class="button is-link is-vcentered" id="create-event">Create Event</button>
+						<button type="submit" class="button is-primary has-text-white is-vcentered" id="create-event">Create Event</button>
 					</div>
 				</div>
 			</form>
