implement creating votes feature

--- a/views/create_event.templ
+++ b/views/create_event.templ
@@ -1,10 +1,10 @@
 package views
 
 templ CreateEvent() {
-	<div class="is-flex is-flex-direction-column">
+	<div class="is-flex is-flex-direction-column box">
 		<h1 class="title"><i class="fa-solid fa-gift"></i> Create Event</h1>
 		<h2 class="subtitle">Create an event and share your generated link with your friends and family to find the perfect present together!</h2>
-		<div id="create-event" name="create-event" class="is-flex is-flex-direction-column box">
+		<div id="create-event" name="create-event" class="is-flex is-flex-direction-column">
 			<form hx-post="/events" hx-target="#content" hx-ext="json-enc">
 				<div class="field" x-data="{ username: $persist('') }">
 					<div class="control">
@@ -13,7 +13,7 @@ templ CreateEvent() {
 				</div>
 				<div class="field">
 					<div class="control">
-						<input class="input is-primary" id="event-name" name="event-name" type="text" placeholder="What is the name of the event?" required/>
+						<input class="input is-primary" id="eventName" name="eventName" type="text" placeholder="What is the name of the event?" required/>
 					</div>
 				</div>
 				<div class="field">
