--- a/views/event_details.templ
+++ b/views/event_details.templ
@@ -11,7 +11,7 @@ templ EventDetails(vm *viewmodels.GetEventViewModel) {
 		<div class="field">
 			<label class="label">Who created this event?</label>
 			<div class="control">
-				{ vm.Creator }
+				{ vm.CreatedBy }
 			</div>
 		</div>
 		<div class="field">
