--- a/views/present_list.templ
+++ b/views/present_list.templ
@@ -12,7 +12,7 @@ templ PresentList(vm viewmodels.PresentListViewModel) {
 			} else {
 				<div class="is-flex is-flex-direction-column">
 					for _, present := range vm.Presents {
-						@PresentListItem(present)
+						@PresentListItem(vm.EventId, present)
 					}
 				</div>
 			}
