--- a/views/present_list_item.templ
+++ b/views/present_list_item.templ
@@ -2,14 +2,51 @@ package views
 
 import "github.com/MorrisMorrison/retfig/viewmodels"
 
-templ PresentListItem(vm viewmodels.PresentListItemViewModel) {
-	<div class="is-flex is-flex-direction-column has-background-primary has-text-light box">
+templ PresentListItem(eventId string, vm viewmodels.PresentListItemViewModel) {
+	<div id={ vm.Name } class="is-flex is-flex-direction-column has-background-primary has-text-light box">
 		<div class="is-flex is-justify-content-space-between">
 			<span class="has-text-weight-semibold">{ vm.Name }</span>
-			<span>{ vm.Creator } - { vm.CreatedAt }</span>
+			<span class="has-text-weight-semibold">{ vm.CreatedBy } - { vm.CreatedAt }</span>
 		</div>
-		<div class="is-flex is-justify-content-space-between">
+		<div class="is-flex is-justify-content-space-between mt-2">
 			<span>{ vm.Link }</span>
+			<div class="is-flex">
+				<div class="is-flex">
+					<button
+						type="button"
+						class="button is-primary"
+						hx-post={ "/events/" + eventId + "/presents/" + vm.Id + "/vote" }
+						hx-trigger="click"
+						hx-target={ "#presentList" }
+						hx-swap="outerHTML"
+						hx-vals={ GetCreateVoteJsonPayload(eventId, vm.Id, "UPVOTE", vm.CreatedBy) }
+						hx-ext="json-enc"
+					>
+						<span class="icon">
+							<i class="fa-solid fa-thumbs-up has-text-light"></i>
+						</span>
+					</button>
+					<button
+						type="button"
+						class="button is-primary"
+						hx-post={ "/events/" + eventId + "/presents/" + vm.Id + "/vote" }
+						hx-trigger="click"
+						hx-target={ "#presentList" }
+						hx-swap="outerHTML"
+						hx-vals={ GetCreateVoteJsonPayload(eventId, vm.Id, "DOWNVOTE", vm.CreatedBy) }
+						hx-ext="json-enc"
+					>
+						<span class="icon">
+							<i class="fa-solid fa-thumbs-down has-text-light"></i>
+						</span>
+					</button>
+				</div>
+				<button type="button" class="button is-primary">
+					<span class="icon">
+						<i class="fa-solid fa-comment has-text-light"></i>
+					</span>
+				</button>
+			</div>
 		</div>
 	</div>
 }
