--- a/views/index.templ
+++ b/views/index.templ
@@ -1,7 +1,7 @@
 package views
 
 templ Index(component templ.Component) {
-	<html class="theme-light">
+	<html >
 		<head>
 			<meta charset="UTF-8"/>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
