--- a/views/present_list_item.templ
+++ b/views/present_list_item.templ
@@ -1,52 +1,70 @@
 package views
 
 import "github.com/MorrisMorrison/retfig/viewmodels"
+import "fmt"
 
 templ PresentListItem(eventId string, vm viewmodels.PresentListItemViewModel) {
-	<div id={ vm.Name } class="is-flex is-flex-direction-column has-background-primary has-text-light box">
-		<div class="is-flex is-justify-content-space-between">
-			<span class="has-text-weight-semibold">{ vm.Name }</span>
-			<span class="has-text-weight-semibold">{ vm.CreatedBy } - { vm.CreatedAt }</span>
-		</div>
-		<div class="is-flex is-justify-content-space-between mt-2">
-			<span>{ vm.Link }</span>
-			<div class="is-flex">
+	<div class="mb-4">
+		<div class="is-flex is-flex-direction-column has-background-primary has-text-light box mb-0">
+			<div class="is-flex is-justify-content-space-between">
+				<span class="has-text-weight-semibold">{ vm.Name }</span>
+				<span class="has-text-weight-semibold">{ vm.CreatedBy } - { vm.CreatedAt }</span>
+			</div>
+			<div class="is-flex is-justify-content-space-between mt-2">
+				<span>{ vm.Link }</span>
 				<div class="is-flex">
+					<div class="is-flex">
+						<button
+							type="button"
+							class="button is-primary"
+							hx-post={ "/events/" + eventId + "/presents/" + vm.Id + "/vote" }
+							hx-trigger="click"
+							hx-target={ "#presentList" }
+							hx-swap="outerHTML"
+							hx-vals={ GetCreateVoteJsonPayload(eventId, vm.Id, "UPVOTE", vm.CreatedBy) }
+							hx-ext="json-enc"
+						>
+							<span class="icon">
+								<i class="fa-solid fa-thumbs-up has-text-light"></i>
+							</span>
+						</button>
+						{ fmt.Sprint(vm.UpvoteCount) }
+						<button
+							type="button"
+							class="button is-primary"
+							hx-post={ "/events/" + eventId + "/presents/" + vm.Id + "/vote" }
+							hx-trigger="click"
+							hx-target={ "#presentList" }
+							hx-swap="outerHTML"
+							hx-vals={ GetCreateVoteJsonPayload(eventId, vm.Id, "DOWNVOTE", vm.CreatedBy) }
+							hx-ext="json-enc"
+						>
+							<span class="icon">
+								<i class="fa-solid fa-thumbs-down has-text-light"></i>
+							</span>
+						</button>
+						{ fmt.Sprint(vm.DownvoteCount) }
+					</div>
 					<button
 						type="button"
 						class="button is-primary"
-						hx-post={ "/events/" + eventId + "/presents/" + vm.Id + "/vote" }
+						hx-get={ "/events/" + eventId + "/presents/" + vm.Id + "/comments" }
 						hx-trigger="click"
-						hx-target={ "#presentList" }
+						hx-target={ "#comments_" + vm.Id }
 						hx-swap="outerHTML"
-						hx-vals={ GetCreateVoteJsonPayload(eventId, vm.Id, "UPVOTE", vm.CreatedBy) }
 						hx-ext="json-enc"
 					>
 						<span class="icon">
-							<i class="fa-solid fa-thumbs-up has-text-light"></i>
-						</span>
-					</button>
-					<button
-						type="button"
-						class="button is-primary"
-						hx-post={ "/events/" + eventId + "/presents/" + vm.Id + "/vote" }
-						hx-trigger="click"
-						hx-target={ "#presentList" }
-						hx-swap="outerHTML"
-						hx-vals={ GetCreateVoteJsonPayload(eventId, vm.Id, "DOWNVOTE", vm.CreatedBy) }
-						hx-ext="json-enc"
-					>
-						<span class="icon">
-							<i class="fa-solid fa-thumbs-down has-text-light"></i>
+							<i class="fa-solid fa-comments has-text-light"></i>
 						</span>
 					</button>
 				</div>
-				<button type="button" class="button is-primary">
-					<span class="icon">
-						<i class="fa-solid fa-comment has-text-light"></i>
-					</span>
-				</button>
 			</div>
+		</div>
+		<div id={ "comments_" + vm.Id }>
+			if vm.ShowComments {
+				@CommentList(eventId, vm.Comments)
+			}
 		</div>
 	</div>
 }
