--- a/ui/views/common/navbar.templ
+++ b/ui/views/common/navbar.templ
@@ -1,4 +1,4 @@
-package views
+package common
 
 templ NavBar() {
 	<nav x-data="{isOpen: false}" class="navbar" role="navigation" aria-label="main navigation">
