--- a/ui/views/comments/comment_list.templ
+++ b/ui/views/comments/comment_list.templ
@@ -6,6 +6,7 @@ templ CommentList(eventId string, vm viewmodels.CommentListViewModel) {
 	<div id={"commentList_" + vm.PresentId} name="commentList" class="is-flex is-flex-direction-column">
 		<div class="is-flex is-flex-direction-column has-text-light box">
 			<span class="has-text-weight-semibold">Comments</span>
+			<div id={ "commentListItems_" + vm.PresentId} class="is-flex is-flex-direction-column">
 			if len(vm.Comments) == 0 {
 				<span class="has-text-weight-light">No Comments created yet!</span>
 			} else {
@@ -13,6 +14,7 @@ templ CommentList(eventId string, vm viewmodels.CommentListViewModel) {
 					@CommentListItem(eventId, comment)
 				}
 			}
+			</div>
 			<div class="mt-2">
 				@AddComment(eventId, vm.PresentId)
 			</div>
