--- a/ui/views/presents/present_list.templ
+++ b/ui/views/presents/present_list.templ
@@ -2,7 +2,7 @@ package presents
 
 import "github.com/MorrisMorrison/retfig/ui/viewmodels"
 
-templ PresentList(vm viewmodels.PresentListViewModel) {
+templ PresentList(vm *viewmodels.PresentListViewModel) {
 	<div id="presentList" class="is-flex is-flex-direction-column mb-5">
 		<div class="is-flex is-flex-direction-column box">
 			<h1 class="title"><i class="fa-solid fa-gift"></i> Presents</h1>
