--- a/ui/views/comments/comment_list_item.templ
+++ b/ui/views/comments/comment_list_item.templ
@@ -2,7 +2,7 @@ package comments
 
 import "github.com/MorrisMorrison/retfig/ui/viewmodels"
 
-templ CommentListItem(eventId string, presentId string, vm viewmodels.CommentListItemViewModel) {
+templ CommentListItem(eventId string, presentId string, vm *viewmodels.CommentListItemViewModel) {
 	<div class="is-flex is-flex-direction-row">
 	<span class="has-text-weight-bold">{vm.Username}</span>: {vm.Content}
 	</div>
