--- a/ui/views/presents/present_list_item.templ
+++ b/ui/views/presents/present_list_item.templ
@@ -7,7 +7,7 @@ import "github.com/MorrisMorrison/retfig/ui/views/payload"
 import "fmt"
 
 
-templ PresentListItem(eventId string, vm viewmodels.PresentListItemViewModel) {
+templ PresentListItem(eventId string, vm *viewmodels.PresentListItemViewModel) {
 	<div class="mb-4" x-data="{showComments: false}">
 		<div class="is-flex is-flex-direction-column has-background-primary has-text-light box mb-0">
 			<div class="is-flex is-justify-content-space-between">
