--- a/ui/views/votes/vote_button.templ
+++ b/ui/views/votes/vote_button.templ
@@ -6,23 +6,27 @@ import "github.com/MorrisMorrison/retfig/ui/viewmodels"
 import "fmt"
 
 templ VoteButton(eventId string, vm *viewmodels.VoteButtonViewModel) {
-	<button
-		type="button"
-		class="button is-primary"
-		hx-post={ "/events/" + eventId + "/presents/" + vm.PresentId + "/vote" }
-		hx-trigger="click"
-		hx-target={ "#voteButtons_" + vm.PresentId }
-		hx-swap="outerHTML"
-		hx-vals={ payload.GetCreateVoteJsonPayload(eventId, vm.PresentId, string(vm.VoteType), vm.CreatedBy) }
-		hx-ext="json-enc"
-	>
-		<span class="icon">
-        if vm.VoteType == "UPVOTE" {
-			<i class="fa-solid fa-thumbs-up has-text-light"></i>
-        } else {
-			<i class="fa-solid fa-thumbs-down has-text-light"></i>
-        }
+	<div class="is-flex is-align-items-baseline">
+		<span class="has-text-light">
+			{ fmt.Sprint(vm.VoteCount) }
 		</span>
-	{ fmt.Sprint(vm.VoteCount) }
-	</button>
+		<button
+			type="button"
+			class="button is-primary"
+			hx-post={ "/events/" + eventId + "/presents/" + vm.PresentId + "/vote" }
+			hx-trigger="click"
+			hx-target={ "#voteButtons_" + vm.PresentId }
+			hx-swap="outerHTML"
+			hx-vals={ payload.GetCreateVoteJsonPayload(eventId, vm.PresentId, string(vm.VoteType), vm.CreatedBy) }
+			hx-ext="json-enc"
+		>
+			<span class="icon">
+				if vm.VoteType == "UPVOTE" {
+					<i class="fa-solid fa-thumbs-up has-text-light"></i>
+				} else {
+					<i class="fa-solid fa-thumbs-down has-text-light"></i>
+				}
+			</span>
+		</button>
+	</div>
 }
