--- a/ui/views/presents/present_list.templ
+++ b/ui/views/presents/present_list.templ
@@ -5,8 +5,13 @@ import "github.com/MorrisMorrison/retfig/ui/viewmodels"
 templ PresentList(vm *viewmodels.PresentListViewModel) {
 	<div id="presentList" class="is-flex is-flex-direction-column mb-5">
 		<div class="is-flex is-flex-direction-column box">
-			<h1 class="title"><i class="fa-solid fa-gift"></i> Presents</h1>
-			<h2 class="subtitle">View and rate present recommendations!</h2>
+			<h1 class="title">
+				<span class="icon is-large">
+					<i class="fa-solid fa-gifts"></i>
+				</span>
+				<span>Presents</span>
+			</h1>
+			<h2 class="subtitle mt-2">View and rate present recommendations!</h2>
 			<div id="presentListItems" class="is-flex is-flex-direction-column">
 				if len(vm.Presents) == 0 {
 					<span id="noPresentsMessage" class="has-text-weight-light">No presents recommended yet!</span>
