--- a/ui/views/comments/comment_list.templ
+++ b/ui/views/comments/comment_list.templ
@@ -2,7 +2,7 @@ package comments
 
 import "github.com/MorrisMorrison/retfig/ui/viewmodels"
 
-templ CommentList(eventId string, vm *viewmodels.CommentListViewModel) {
+templ CommentList(vm *viewmodels.CommentListViewModel) {
 	<div id={"commentList_" + vm.PresentId} name="commentList" class="is-flex is-flex-direction-column">
 		<div class="is-flex is-flex-direction-column has-text-light box">
 			<span class="has-text-weight-semibold">Comments</span>
@@ -11,12 +11,12 @@ templ CommentList(eventId string, vm *viewmodels.CommentListViewModel) {
 				<span id={"noCommentsMessage_" + vm.PresentId} class="has-text-weight-light">No Comments created yet!</span>
 			} else {
 				for _, comment := range vm.Comments {
-					@CommentListItem(eventId, vm.PresentId, comment)
+					@CommentListItem(comment)
 				}
 			}
 			</div>
 			<div class="mt-2">
-				@AddComment(eventId, vm.PresentId)
+				@AddComment(vm.EventId, vm.PresentId)
 			</div>
 		</div>
 	</div>
