--- a/ui/views/comments/comment_list_item.templ
+++ b/ui/views/comments/comment_list_item.templ
@@ -2,10 +2,10 @@ package comments
 
 import "github.com/MorrisMorrison/retfig/ui/viewmodels"
 
-templ CommentListItem(eventId string, presentId string, vm *viewmodels.CommentListItemViewModel) {
+templ CommentListItem(vm *viewmodels.CommentListItemViewModel) {
 	<div class="is-flex is-flex-direction-row">
 	<span class="has-text-weight-bold">{vm.Username}</span>: {vm.Content}
 	</div>
-	<div id={"noCommentsMessage_" + presentId} hx-swap-oob="true"></div>
+	<div id={"noCommentsMessage_" + vm.PresentId} hx-swap-oob="true"></div>
 
 }
