--- a/ui/views/votes/vote_button.templ
+++ b/ui/views/votes/vote_button.templ
@@ -5,7 +5,7 @@ import "github.com/MorrisMorrison/retfig/ui/viewmodels"
 
 import "fmt"
 
-templ VoteButton(eventId string, vm *viewmodels.VoteButtonViewModel) {
+templ VoteButton(vm *viewmodels.VoteButtonViewModel) {
 	<div class="is-flex is-align-items-baseline">
 		<span class="has-text-light">
 			{ fmt.Sprint(vm.VoteCount) }
@@ -13,11 +13,11 @@ templ VoteButton(eventId string, vm *viewmodels.VoteButtonViewModel) {
 		<button
 			type="button"
 			class="button is-primary"
-			hx-post={ "/events/" + eventId + "/presents/" + vm.PresentId + "/vote" }
+			hx-post={ "/events/" + vm.EventId + "/presents/" + vm.PresentId + "/vote" }
 			hx-trigger="click"
 			hx-target={ "#voteButtons_" + vm.PresentId }
 			hx-swap="outerHTML"
-			hx-vals={ payload.GetCreateVoteJsonPayload(eventId, vm.PresentId, string(vm.VoteType), vm.CreatedBy) }
+			hx-vals={ payload.GetCreateVoteJsonPayload(vm.EventId, vm.PresentId, string(vm.VoteType), vm.CreatedBy) }
 			hx-ext="json-enc"
 		>
 			<span class="icon">
