--- a/ui/views/votes/vote_buttons.templ
+++ b/ui/views/votes/vote_buttons.templ
@@ -3,18 +3,18 @@ package votes
 import "github.com/MorrisMorrison/retfig/ui/viewmodels"
 import "github.com/MorrisMorrison/retfig/persistence/models"
 
-templ VoteButtons(eventId string, vm *viewmodels.VoteButtonsViewModel) {
+templ VoteButtons(vm *viewmodels.VoteButtonsViewModel) {
 	<div id={ "voteButtons_" + vm.PresentId} class="is-flex">
-		@VoteButton(eventId, &viewmodels.VoteButtonViewModel{
-						EventId: eventId,
+		@VoteButton(&viewmodels.VoteButtonViewModel{
+						EventId: vm.EventId,
 						PresentId: vm.PresentId,
 						VoteType: models.UPVOTE,
 						VoteCount: vm.UpvoteCount,
 						CreatedBy: vm.CreatedBy,
 						IsVotedByUser: vm.IsUpvotedByUser,
 					})
-		@VoteButton(eventId, &viewmodels.VoteButtonViewModel{
-						EventId: eventId,
+		@VoteButton(&viewmodels.VoteButtonViewModel{
+						EventId: vm.EventId,
 						PresentId: vm.PresentId,
 						VoteType: models.DOWNVOTE,
 						VoteCount: vm.DownvoteCount,
