--- a/ui/views/comments/add_comment.templ
+++ b/ui/views/comments/add_comment.templ
@@ -1,10 +1,10 @@
 package comments
 
-import "fmt"
+import "github.com/MorrisMorrison/retfig/utils/links"
 
 templ AddComment(eventId string, presentId string) {
 	<div id="add-comment" name="add-comment" class="is-flex is-flex-direction-column" x-data="{ content: ''}">
-		<form hx-post={ fmt.Sprintf("/events/%s/presents/%s/comments", eventId, presentId) } @htmx:after-request="content='';"  hx-target={ "#commentListItems_" + presentId } hx-swap="beforeend" hx-ext="json-enc">
+		<form hx-post={ links.BuildCreateCommentLink(eventId, presentId) } @htmx:after-request="content='';"  hx-target={ "#commentListItems_" + presentId } hx-swap="beforeend" hx-ext="json-enc">
 			<div x-data="{ username: $persist('') }">
 				<input type="hidden" id="username" name="username" x-model="username"/>
 				<input type="hidden" id="eventId" name="eventId" value={ eventId }/>
