--- a/ui/views/presents/present_list_item.templ
+++ b/ui/views/presents/present_list_item.templ
@@ -1,21 +1,19 @@
 package presents
 
+import "github.com/MorrisMorrison/retfig/utils/links"
+
 import "github.com/MorrisMorrison/retfig/ui/viewmodels"
 import "github.com/MorrisMorrison/retfig/ui/views/comments"
 import "github.com/MorrisMorrison/retfig/ui/views/votes"
 
 import "fmt"
-
-import "github.com/MorrisMorrison/retfig/utils/links"
+import "strconv"
 
 templ PresentListItem(vm *viewmodels.PresentListItemViewModel) {
-	<div class="mb-4" x-data="{showComments: false}">
+	<div id={ "present_" + vm.PresentId } class="mb-4" x-data={ fmt.Sprintf("{showComments: false, isClaimed: %s, username: $persist('')}", strconv.FormatBool(vm.IsClaimed)) }>
 		<div class="is-flex is-flex-direction-column has-background-primary has-text-light box mb-0">
 			<div class="is-flex is-justify-content-space-between is-align-items-center">
 				<div class="is-flex is-align-items-center">
-				 <span class="icon">
-					<i class="fa-solid fa-gift"></i>
-					</span>
 					<span class="has-text-weight-semibold is-size-4">{ vm.Name }</span>
 				</div>
 				<span class="has-text-weight-semibold">{ vm.CreatedBy } - { vm.CreatedAt }</span>
@@ -23,6 +21,24 @@ templ PresentListItem(vm *viewmodels.PresentListItemViewModel) {
 			<div class="is-flex is-justify-content-space-between mt-2">
 				<span>{ vm.Link }</span>
 				<div class="is-flex">
+					<form
+						hx-post={ links.BuildClaimPresentLink(vm.EventId, vm.PresentId) }
+						hx-target={ "#present_" + vm.PresentId }
+						hx-swap="outerHTML"
+						hx-ext="json-enc"
+					>
+						<div class="is-flex is-align-items-baseline">
+							<input type="hidden" id="username" name="username" x-model="username"/>
+							<button
+								@click="isClaimed = !isClaimed"
+								class="button is-primary"
+							>
+								<span class="icon">
+									<i :class="{ 'fa-solid': isClaimed, 'fa-regular': !isClaimed, 'has-text-warning': isClaimed, 'has-text-light': !isClaimed}" class="fa-hand"></i>
+								</span>
+							</button>
+						</div>
+					</form>
 					@votes.VoteButtons(&viewmodels.VoteButtonsViewModel{
 						EventId: vm.EventId,
 						PresentId: vm.PresentId,
