--- a/ui/views/votes/vote_button.templ
+++ b/ui/views/votes/vote_button.templ
@@ -18,7 +18,7 @@ templ VoteButton(vm *viewmodels.VoteButtonViewModel) {
 			hx-trigger="click"
 			hx-target={ "#voteButtons_" + vm.PresentId }
 			hx-swap="outerHTML"
-			hx-vals={ payload.GetCreateVoteJsonPayload(vm.EventId, vm.PresentId, string(vm.VoteType), vm.CreatedBy) }
+			hx-vals={ payload.GetCreateVoteJsonPayload(string(vm.VoteType), vm.CreatedBy) }
 			hx-ext="json-enc"
 		>
 			<span class="icon">
