implement simple authentication that stores jwt as a cookie, because we need to know the currentUser on the serverside to be able to render proper ui states

--- a/ui/views/presents/present_list_item.templ
+++ b/ui/views/presents/present_list_item.templ
@@ -51,6 +51,8 @@ templ PresentListItem(vm *viewmodels.PresentListItemViewModel) {
 						UpvoteCount: vm.UpvoteCount,
 						DownvoteCount: vm.DownvoteCount,
 						CreatedBy: vm.CreatedBy, 
+						IsUpvotedByUser: true,
+						IsDownvotedByUser: false,
 					})
 					<div class="is-flex is-align-items-baseline">
 						<span class="has-text-light">{ fmt.Sprint(vm.CommentCount) }</span>
